# sinov

./: .env.example  .env.keys.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  QUICKSTART.md  README.md  pyproject.toml
bots/data/: states.json
bots/profiles/: bot001.yaml  bot002.yaml  bot003.yaml  bot005.yaml  bot006.yaml  bot007.yaml  bot008.yaml  bot009.yaml  bot011.yaml  bot012.yaml  bot014.yaml  bot015.yaml  bot016.yaml  bot020.yaml  bot023.yaml  bot029.yaml  bot030.yaml  bot033.yaml  bot034.yaml  bot035.yaml  bot038.yaml  bot039.yaml  bot040.yaml  bot041.yaml  bot042.yaml  bot043.yaml  bot044.yaml  bot045.yaml  bot048.yaml  bot050.yaml  bot051.yaml  bot058.yaml  bot059.yaml  bot064.yaml  bot065.yaml  bot066.yaml  bot067.yaml  bot071.yaml  bot072.yaml  (+16 more)
docs/: README.md  architecture.md  bot-profile.md  character-ideas.md  cli.md  content-generation.md  deployment.md  development.md  interaction.md  memory.md  models.md  ng-rules.md  operations.md  parameters.md  prompts.md  relationships.md  reporters.md  services.md  town-structure.md
npcs/: _common.yaml
scripts/: add_writing_style.py  adjust_chronotypes.py  assign_names.py  collect_news.py  cron_tick.sh  delete_all_posts.py  delete_posts.py  generate_keys.py  generate_window_colors.py  merge_parameters.py  migrate_to_resident_folders.py  reduce_post_frequency.py  rollout.py  set_early_birds.py  set_hourly_weight.py  set_night_owls.py  set_npc_profiles.py  set_profiles.py  update_markdown_settings.py  update_profiles.py
src/: __init__.py  bot_manager.py  cli.py  llm.py  main.py  types.py
(+295 files in other folders)
